Bypass the SSL check when getting input from the CurseForge API (naughty, I know, just for now until I figure out this certificate stuff :3) so that information can be read in a non-dev environment | coremod information is now automatically added to the MANIFEST.MF when building

--- a/build.gradle
+++ b/build.gradle
@@ -67,3 +67,10 @@ processResources {
         exclude 'mcmod.info'
     }
 }
+
+jar {
+	manifest {
+        attributes 'FMLCorePlugin': 'net.geforcemods.safeguard.asm.LoadingHook'
+        attributes 'FMLCorePluginContainsFMLMod': 'net.geforcemods.safeguard.Safeguard'
+    }
+}
